--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
     "body-parser": "^1.20.2",
     "chai": "^5.1.0",
     "chai-http": "^4.4.0",
-    "express": "^4.19.1"
-  },
-  "devDependencies": {
+    "express": "^4.19.1",
     "mocha": "^10.3.0"
   }
 }
